# expense-claim-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  app.py  commitlint.config.js  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: bandit.yml  clickup.yml  commitlint.yml  pytest.yml  ruff.yml  semantic_release.yml
experiments/: __init__.py
experiments/langfuse/: README.md  __init__.py  evaluators.py  run_experiment.py  sroie.py  upload_dataset.py  upload_sroie_dataset.py
experiments/langfuse/sroie/: __init__.py  dataset.py  upload.py
migrations/: env.py
migrations/versions/: 20260618_01_create_employee_table.py  20260619_02_add_receipt_corrections.py  20260619_03_add_corrected_validation.py  20260619_04_add_human_review.py
prompts/: __init__.py  receipt_extraction.py
src/: __init__.py  agents.py  database.py  extraction.py  langfuse_client.py  main.py  models.py  ocr.py  policy.py  schema.py  schemas.py  validation.py
src/client/: langfuse_client.py
src/database/: entities.py  operations.py
src/shared/: __init__.py  schemas.py  utils.py
src/workflow/: __init__.py  agents.py  extraction.py  ocr.py  policy.py  validation.py
src/workflow/agents/: __init__.py  utils.py
src/workflow/agents/claim_validation/: __init__.py  agent.py  validation.py
src/workflow/agents/decision/: __init__.py  agent.py
tests/: __init__.py  test_agents.py  test_database.py  test_extraction.py  test_main.py  test_ocr.py  test_policy.py  test_sroie_experiments.py  test_validation.py
(+11 files in other folders)
