[project]
name = "expense-claim-agent"
version = "0.0.0"
description = "Agentic AI system for automating employee expense claim review"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [{ name = "Boon Yin Yin" }]
dependencies = [
    "fastapi",
    "pydantic",
    "python-dotenv",
    "sqlalchemy",
    "streamlit",
    "uvicorn",
]

[dependency-groups]
lint = [
    "bandit~=1.9.4",
    "ruff~=0.14.14",
]
test = [
    "httpx",
    "pytest",
]

[tool.ruff]
required-version = ">=0.14.14"
output-format = "concise"
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb",
]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
